<?xml version="1.0"?>
<package format="3">
    <name>aduulm_launch</name>
    <version>0.0.1</version>
    <description>aduulm_launch</description>
    <author>Jan Strohbeck</author>
    <author>The MRM Team</author>
    <maintainer email="johannes.kopp@uni-ulm.de">Johannes Kopp</maintainer>
    <license>Apache 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>aduulm_launch_lib</depend>
    <depend>aduulm_cmake_tools</depend>

    <test_depend>lifecycle</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
